<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_below="@string/app_name">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre">

    </EditText>

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"></EditText>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"></EditText>

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"></EditText>

    <Button
        android:id="@+id/botonFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha de Nacimiento"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="120dp" />



    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Editar"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="120dp" />
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonSiguiente"></Button>


</LinearLayout>

</RelativeLayout>