<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MostrarDatos"
    >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_gravity="center"></TextView>
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="@dimen/tamanoLetra"
        android:layout_marginTop="@dimen/espaciado"></TextView>
    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="@dimen/tamanoLetra"
        android:layout_marginTop="@dimen/espaciado"></TextView>
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/tamanoLetra"
        android:layout_marginTop="@dimen/espaciado"></TextView>
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="@dimen/tamanoLetra"
        android:layout_marginTop="@dimen/espaciado"></TextView>
    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tamanoLetra"
        android:layout_marginTop="@dimen/espaciado"></TextView>
   <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEditar"
        android:layout_marginTop="@dimen/espaciado"></Button>

</LinearLayout>